[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trust-mcp"
version = "0.1.0"
description = "MCP server exposing IEOTBSM Trust API tools"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
trust-mcp = "trust_mcp.server:main"
